--- a/app/src/main/res/xml/fragment_details_xml_main_constraint_scene.xml
+++ b/app/src/main/res/xml/fragment_details_xml_main_constraint_scene.xml
@@ -7,10 +7,8 @@
         motion:constraintSetStart="@id/start"
         motion:duration="1000">
 
+        <OnSwipe motion:dragDirection="dragDown" />
 
-        <OnSwipe
-            motion:dragDirection="dragUp"
-            motion:touchAnchorId="@+id/movie_poster" />
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
@@ -22,15 +20,37 @@
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
 
+        <Constraint
+            android:id="@+id/view5"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:background="@drawable/movie_image_gradient"
+            motion:layout_constraintBottom_toBottomOf="@id/movie_poster"
+            motion:layout_constraintEnd_toEndOf="@id/movie_poster"
+            motion:layout_constraintStart_toStartOf="@id/movie_poster"
+            motion:layout_constraintTop_toTopOf="@id/movie_poster" />
+
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/movie_poster"
+            android:id="@id/movie_poster"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:alpha="0.5"
-            motion:layout_constraintEnd_toEndOf="parent" />
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@id/view5"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:alpha="0.5"
+            motion:layout_constraintBottom_toBottomOf="@id/movie_poster"
+            motion:layout_constraintEnd_toEndOf="@id/movie_poster"
+            motion:layout_constraintStart_toStartOf="@id/movie_poster"
+            motion:layout_constraintTop_toTopOf="@id/movie_poster"/>
 
     </ConstraintSet>
 </MotionScene>
