--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -5,37 +5,33 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.watermelon.moviesapp.ui.tv.TvViewModel" />
+
+        <variable
+            name="adapter"
+            type="com.watermelon.moviesapp.ui.tv.adapter.TvNestedAdapter" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:text="TV Fragment"
-            android:textStyle="bold"
-            android:textSize="44sp"
-            android:gravity="center"
-
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tv_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/margin3x"
-            android:visibility="visible"
-            app:spanCount="2"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:orientation="vertical"
+            app:adapter="@{adapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_home_middle_recycler" />
+            tools:listitem="@layout/item_tv_parent_season" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
