--- a/app/src/main/res/layout/fragment_genres.xml
+++ b/app/src/main/res/layout/fragment_genres.xml
@@ -17,7 +17,9 @@
             android:id="@+id/recycler_genre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            app:spanCount="2"
+            app:items="@{viewModel.moviesOfOneGenre.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
