fix: some bug in tv providers channel  adapter view model and nested adapter

--- a/app/src/main/res/layout/item_tv_parent_providers_channel.xml
+++ b/app/src/main/res/layout/item_tv_parent_providers_channel.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="@dimen/margin1x"
             android:gravity="center_vertical|start"
             android:text="@string/all"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +38,7 @@
             android:gravity="bottom|end"
             android:text="@string/show_more"
             android:textSize="12sp"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
