--- a/app/src/main/res/layout/item_tv_parent_channel.xml
+++ b/app/src/main/res/layout/item_tv_parent_channel.xml
@@ -23,6 +23,7 @@
             android:gravity="center_vertical|start"
             android:text="@string/all"
             android:textSize="15sp"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
             android:layout_marginEnd="@dimen/margin2x"
             android:gravity="bottom|end"
             android:text="@string/show_more"
+            android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
