--- a/app/src/main/res/layout/item_tv_parent_season.xml
+++ b/app/src/main/res/layout/item_tv_parent_season.xml
@@ -24,6 +24,7 @@
             android:layout_marginTop="@dimen/margin1x"
             android:gravity="center_vertical|start"
             android:text="@string/all"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +39,7 @@
             android:layout_marginEnd="@dimen/margin2x"
             android:gravity="bottom|end"
             android:text="@string/show_more"
+            android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
