--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -18,8 +18,8 @@
         android:title="@string/tv"
         android:color="@color/icons"/>
     <item
-        android:id="@+id/fragment_main"
-        android:icon="@drawable/ic_baseline_live_tv_24"
-        android:title="@string/main"
+        android:id="@+id/trendingFragment"
+        android:icon="@drawable/ic_baseline_trending_up_24"
+        android:title="@string/trending"
         android:color="@color/icons"/>
 </menu>
