--- a/app/src/main/res/layout/item_trending_child_tv.xml
+++ b/app/src/main/res/layout/item_trending_child_tv.xml
@@ -16,7 +16,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="180dp"
         android:layout_height="250dp"
-        android:layout_margin="@dimen/margin8dp"
+        android:layout_margin="@dimen/margin1x"
         app:cardCornerRadius="@dimen/margin8dp"
         app:cardElevation="4dp">
         <androidx.constraintlayout.widget.ConstraintLayout
