--- a/app/src/main/res/layout/item_trending_parent_person.xml
+++ b/app/src/main/res/layout/item_trending_parent_person.xml
@@ -17,10 +17,11 @@
             android:id="@+id/type_name"
             android:text="@string/person"
             android:textStyle="bold"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:gravity="center_vertical|start"
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginStart="@dimen/margin1x"
+            android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,12 +32,13 @@
             android:id="@+id/show_more"
             android:text="@string/show_more"
             android:textStyle="bold"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:gravity="bottom|end"
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginEnd="@dimen/margin2x"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -47,6 +49,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:adapter="@{adapter}"
+            android:layout_margin="@dimen/margin2x"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
