fix: tv fragment recyclers

--- a/app/src/main/res/layout/item_tv_parent_channel.xml
+++ b/app/src/main/res/layout/item_tv_parent_channel.xml
@@ -45,7 +45,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_trending_all"
+            android:id="@+id/recycler_channel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
