--- a/app/src/main/res/layout/item_tv_child_channel.xml
+++ b/app/src/main/res/layout/item_tv_child_channel.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.channel.Result" />
+            type="com.watermelon.moviesapp.model.response.channel.Channel" />
 
     </data>
 
