--- a/app/src/main/res/layout/item_tv_parent_season.xml
+++ b/app/src/main/res/layout/item_tv_parent_season.xml
@@ -47,7 +47,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_trending_all"
+            android:id="@+id/recycler_season"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
