--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,11 +7,6 @@
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.home.HomeViewModel" />
-
-        <variable
-            name="adapter"
-            type="com.watermelon.moviesapp.ui.home.adapter.NestedAdapter" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -67,7 +62,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin8dp"
             android:orientation="vertical"
-            app:adapter="@{adapter}"
+            app:items="@{viewModel.movies.toData().items}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/scrollView"
