--- a/app/src/main/res/layout/item_home_top_recycler.xml
+++ b/app/src/main/res/layout/item_home_top_recycler.xml
@@ -20,11 +20,13 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="225dp"
+            android:layout_height="0dp"
             app:cardCornerRadius="10dp"
-            android:layout_margin="24dp"
+            android:layout_margin="@dimen/margin5x"
             app:cardElevation="4dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
@@ -39,18 +41,6 @@
                 tools:src="@tools:sample/avatars" />
 
         </androidx.cardview.widget.CardView>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floating_action_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:contentDescription="@string/play"
-            android:elevation="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/cardView"
-            app:layout_constraintEnd_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
