--- a/app/src/main/res/layout/item_trending_parent_all.xml
+++ b/app/src/main/res/layout/item_trending_parent_all.xml
@@ -35,6 +35,7 @@
             android:textSize="14sp"
             android:gravity="bottom|end"
             android:textColor="@color/white"
+            android:visibility="invisible"
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginEnd="@dimen/margin2x"
             android:layout_width="match_parent"
