--- a/app/src/main/res/layout/item_trending_parent_person.xml
+++ b/app/src/main/res/layout/item_trending_parent_person.xml
@@ -36,6 +36,7 @@
             android:gravity="bottom|end"
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginEnd="@dimen/margin2x"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
