--- a/app/src/main/res/layout/item_trending_parent_tv.xml
+++ b/app/src/main/res/layout/item_trending_parent_tv.xml
@@ -38,6 +38,7 @@
             android:layout_marginTop="@dimen/margin1x"
             android:layout_marginEnd="@dimen/margin2x"
             android:textColor="@color/white"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
