--- a/app/src/main/res/layout/item_tv_child_channel.xml
+++ b/app/src/main/res/layout/item_tv_child_channel.xml
@@ -13,8 +13,8 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="180dp"
-        android:layout_height="250dp"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
         android:layout_margin="@dimen/margin8dp"
         app:cardCornerRadius="@dimen/margin8dp"
         app:cardElevation="4dp">
