--- a/app/src/main/res/layout/item_tv_parent_season.xml
+++ b/app/src/main/res/layout/item_tv_parent_season.xml
@@ -42,6 +42,7 @@
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
