--- a/app/src/main/res/layout/item_tv_child_channel.xml
+++ b/app/src/main/res/layout/item_tv_child_channel.xml
@@ -13,8 +13,8 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_width="240dp"
+        android:layout_height="290dp"
         android:layout_margin="@dimen/margin8dp"
         app:cardCornerRadius="@dimen/margin8dp"
         app:cardElevation="4dp">
@@ -26,10 +26,10 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/item_image"
                 android:layout_width="match_parent"
-                android:layout_height="155dp"
+                android:layout_height="240dp"
                 android:layout_margin="@dimen/margin4dp"
                 android:background="@color/white"
-                android:scaleType="centerCrop"
+                android:scaleType="center"
                 app:image="@{item.logoPath}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -37,6 +37,7 @@
 
             <TextView
                 android:id="@+id/item_name"
+                android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin4dp"
