--- a/app/src/main/res/layout/item_genre_recycler.xml
+++ b/app/src/main/res/layout/item_genre_recycler.xml
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:numStars="5"
                 android:rating="@{Float.valueOf(item.voteAverage/2f)}"
-                android:progressTint="@color/icons"
+                android:progressTint="@color/base_color"
                 android:progressBackgroundTint="@color/blue_text_color"
                 android:isIndicator="true"
                 android:layout_marginTop="@dimen/margin8dp"
