--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,21 +5,21 @@
         android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/home"
         android:checked="true"
-        android:color="@color/icons"/>
+        android:color="@color/base_color"/>
 
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/search"
-        android:color="@color/icons"/>
+        android:color="@color/base_color"/>
     <item
         android:id="@+id/tvFragment"
         android:icon="@drawable/ic_baseline_live_tv_24"
         android:title="@string/tv"
-        android:color="@color/icons"/>
+        android:color="@color/base_color"/>
     <item
         android:id="@+id/trendingFragment"
         android:icon="@drawable/ic_baseline_trending_up_24"
         android:title="@string/trending"
-        android:color="@color/icons"/>
+        android:color="@color/base_color"/>
 </menu>
