--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="icons">#4b98c4</color>
+    <color name="base_color">#E99A27</color>
     <color name="background_color">#11191f</color>
     <color name="status_bar_color">#39424A</color>
 
     <color name="blue_text_color">#2f6688</color>
     <color name="gray_text_color">#75787b</color>
-    <color name="cards_color">#192c37</color>
-
+    <color name="cards_color">#2E303D</color>
 
     <color name="searchStroke">#AACAB3</color>
     <color name="lightGrey">#EBEBEB</color>
+
+    <color name="dark_bg">#161D27</color>
+    <color name="light_bg">#F7F7F7</color>
+
+    <color name="dark_secondary">#747AA6</color>
+    <color name="light_secondary">#8B8B8B</color>
+
+    <color name="light_text">#FFFFFF</color>
+    <color name="dark_text">#333333</color>
+
 </resources>
