--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -98,10 +98,10 @@
             android:layout_margin="@dimen/margin8dp"
             android:visibility="visible"
             app:items="@{viewModel.movieSearchResult.toData().results}"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+
             app:layout_constraintTop_toBottomOf="@+id/break_line"
-            app:spanCount="3"
             tools:listitem="@layout/item_search_recycler_view" />
 
 
