--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,6 +12,7 @@
     </style>
 
     <style name="ShapeAppearanceOverlay.App.CornerSize10Percent" parent="">
-        <item name="cornerSize">10dp</item>
+        <item name="cornerSize">10%</item>
     </style>
+
 </resources>
