--- a/app/src/main/res/layout/item_tv_parent_season.xml
+++ b/app/src/main/res/layout/item_tv_parent_season.xml
@@ -58,7 +58,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/type_name"
-            tools:listitem="@layout/item_tv_child_season" />
+            tools:listitem="@layout/item_tv" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
